--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -22,13 +22,13 @@ $browser = google-chrome-stable
 # Window/Session actions
 bind = $navMod, Q, killactive
 bind = $ctrlMod, F4, killactive
-bind = $navMod, V, togglefloating # toggle the window on focus to float
-bind = $mainMod, fullscreen # toggle the window on focus to fullscreen
+bind = $navMod, V, togglefloating, # toggle the window on focus to float
+bind = $confMod, F, fullscreen, # toggle the window on focus to fullscreen
 bind = $mainMod, l, exec, swaylock # lock screen
 bind = $mainMod, backspace, exec, wlogout-launcher-hyprland 1 # logout menu
 bind = $navMod, ESCAPE, exec, systemctl-toggle --user waybar.service
 
-bind = $navMod, W, togglegroup # toggle the window on focus to float
+bind = $navMod, W, togglegroup, # toggle the window on focus to float
 
 # Application shortcuts
 bind = $mainMod, T, exec, $term  # open terminal
