--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -26,14 +26,24 @@ exec-once = wl-paste --type image --watch cliphist store # clipboard store image
 # Some default env vars.
 
 # TODO: move some environment variables elsewhere?
-env = XDG_CURRENT_DESKTOP,Hyprland
+#env = XDG_CURRENT_DESKTOP,Hyprland
+#env = XDG_SESSION_TYPE,wayland
+#env = XDG_SESSION_DESKTOP,Hyprland
+#env = GDK_BACKEND,wayland
+#env = QT_QPA_PLATFORM,wayland
+#env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+#env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+#env = MOZ_ENABLE_WAYLAND,1
+
+# Some default env vars.
+# env = XCURSOR_SIZE,24
+env = WLR_NO_HARDWARE_CURSORS,1
+# env = NIXOS_OZONE_WL,1
+#
+env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
-env = GDK_BACKEND,wayland
-env = QT_QPA_PLATFORM,wayland
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = MOZ_ENABLE_WAYLAND,1
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 
 
