fix hid_apple bug

--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -35,16 +35,6 @@ exec-once = kitty # Make sure a terminal is accessible
 #env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 #env = MOZ_ENABLE_WAYLAND,1
 
-# Some default env vars.
-# env = XCURSOR_SIZE,24
-env = WLR_NO_HARDWARE_CURSORS,1
-# env = NIXOS_OZONE_WL,1
-#
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-
 
 
 # █ █▄░█ █▀█ █░█ ▀█▀
@@ -59,7 +49,7 @@ input {
     kb_model = macintosh
     kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch
 
-    follow_mouse = 0
+    follow_mouse = 1
 
     touchpad {
         natural_scroll = yes
@@ -117,3 +107,4 @@ misc {
 source = ~/.config/hypr/animations.conf
 source = ~/.config/hypr/keybindings.conf
 source = ~/.config/hypr/windowrules.conf
+source = ~/.config/hypr/nvidia.conf
