--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -15,7 +15,7 @@ $auxMod = $navMod SHIFT
 
 # assign apps
 $term = kitty
-$editor = code
+$editor = code-insiders
 $file = dolphin
 $browser = google-chrome-stable
 
@@ -33,7 +33,7 @@ bind = $navMod, W, togglegroup, # toggle the window on focus to float
 # Application shortcuts
 bind = $mainMod, T, exec, $term  # open terminal
 bind = $mainMod, E, exec, $file # open file manager
-bind = $mainMod, C, exec, $editor # open vscode
+#bind = $mainMod, C, exec, $editor # open vscode
 bind = $mainMod, F, exec, $browser # open browser
 
 # Rofi is toggled on/off if you repeat the key presses
@@ -41,14 +41,14 @@ bind = $ctrlMod, SPACE, exec, pkill -x rofi || rofilaunch.sh d # launch desktop 
 bind = $ctrlMod, TAB, exec, pkill -x rofi || rofilaunch.sh w # switch between desktop applications
 
 bind = $mainMod, R, exec, pkill -x rofi || rofilaunch.sh f # browse system files
-bind = $mainMod, V, exec, pkill -x rofi || cliphist.sh c  # open Pasteboard in screen center
+#bind = $mainMod, V, exec, pkill -x rofi || cliphist.sh c  # open Pasteboard in screen center
 bind = $confMod, T, exec, pkill -x rofi || themeselect.sh # theme select menu
 bind = $confMod, A, exec, pkill -x rofi || rofiselect.sh # rofi style select menu
-bind = $confMod, W, exec, pkill -x rofi || swwwallselect.sh # rofi wall select menu
+bind = $confMod, W, exec, pkill -x rofi || swwwallselect-patched.sh # rofi wall select menu
 
 # Wallpaper control
-bind = $navMod, right, exec, swimctl next # next wallpaper
-bind = $navMod, left, exec, swimctl previous # previous wallpaper
+bind = $auxMod, right, exec, swimctl next # next wallpaper
+bind = $auxMod, left, exec, swimctl previous # previous wallpaper
 bind = $confMod, mouse_down, exec, swimctl next
 bind = $confMod, mouse_up, exec, swimctl previous
 
@@ -73,20 +73,20 @@ bind = $mainMod ALT, down, exec, waybar-confgen-hyprdots p # previous waybar mod
 bind = $mainMod, ESCAPE, exec, kitty -e htop  # open htop/btop if installed or default to top (system monitor)
 #bind = $confMod, K, exec, keyboardswitch.sh # change keyboard layout
 
-# Brightness control
+# Brightness control copper.packages.nailgun
 bindel = , XF86MonBrightnessUp, exec, brightnesscontrol.sh i # increase brightness
 bindel = , XF86MonBrightnessDown, exec, brightnesscontrol.sh d # decrease brightness
 
 # Screenshot/Screencapture
-bind = $confMod, P, exec, screenshot.sh s # drag to snip an area / click on a window to print it
-bind = $mainMod, P, exec, screenshot.sh m # print focused monitor
+#bind = $confMod, P, exec, screenshot.sh s # drag to snip an area / click on a window to print it
+#bind = $mainMod, P, exec, screenshot.sh m # print focused monitor
 bind = ,print, exec, screenshot.sh p  # print all monitor outputs
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $navMod, left, movefocus, l
+bind = $navMod, right, movefocus, r
+bind = $navMod, up, movefocus, u
+bind = $navMod, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -105,7 +105,7 @@ bind = $mainMod, K, workspace, r+1
 bind = $mainMod, J, workspace, r-1
 
 # move to the first empty workspace instantly with mainMod + CTRL + [↓]
-bind = $navMod, down, workspace, empty 
+bind = $auxMod, down, workspace, empty 
 
 # Resize windows
 binde = $auxMod, right, resizeactive, 30 0
