--- a/config/waybar/modules/wallchange.jsonc
+++ b/config/waybar/modules/wallchange.jsonc
@@ -3,7 +3,7 @@
         "exec": "echo ; echo 󰆊 switch wallpaper",
         "on-click": "swimctl next",
         "on-click-right": "swimctl previous",
-        "on-click-middle": "swwwallselect.sh",
+        "on-click-middle": "swwwallselect-patched.sh",
         "interval" : 86400, // once every day
         "tooltip": true
     },
