--- a/config/hypr/windowrules.conf
+++ b/config/hypr/windowrules.conf
@@ -16,6 +16,7 @@ windowrulev2 = opacity 0.80 0.80,class:^(steam)$
 windowrulev2 = opacity 0.80 0.80,class:^(steamwebhelper)$
 windowrulev2 = opacity 0.80 0.80,class:^(Spotify)$
 windowrulev2 = opacity 0.80 0.80,class:^(Code)$
+windowrulev2 = opacity 0.80 0.90,class:^(code-)(.*)$
 windowrulev2 = opacity 0.80 0.80,class:^(code-url-handler)$
 windowrulev2 = opacity 0.80 0.80,class:^(kitty)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.dolphin)$
@@ -57,4 +58,7 @@ windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,class:^(nm-applet)$
 windowrulev2 = float,class:^(nm-connection-editor)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
+windowrulev2 = float,title:^(Open\ Folder)$
+windowrulev2 = float,title:^(Open\ File)$
+
 
