--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -45,6 +45,7 @@ exec-once = kitty # Make sure a terminal is accessible
 # TODO: configure from system config?
 input {
     kb_layout = se
+    #kb_variant = nodeadkeys
     #kb_variant = mac
     kb_model = macintosh
     kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch
@@ -54,8 +55,9 @@ input {
     touchpad {
         natural_scroll = yes
         clickfinger_behavior = 1
-        scroll_factor = 0.5
-        middle_button_emulation = false
+        scroll_factor = 0.7
+        middle_button_emulation = 0
+        tap-to-click = 0
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -97,6 +99,8 @@ decoration {
 
 misc {
     disable_hyprland_logo = 1
+    mouse_move_enables_dpms = true
+    key_press_enables_dpms = true
 }
 
 
