--- a/config/hypr/windowrules.conf
+++ b/config/hypr/windowrules.conf
@@ -15,14 +15,16 @@ windowrulev2 = opacity 0.80 0.80,class:^(Steam)$
 windowrulev2 = opacity 0.80 0.80,class:^(steam)$
 windowrulev2 = opacity 0.80 0.80,class:^(steamwebhelper)$
 windowrulev2 = opacity 0.80 0.80,class:^(Spotify)$
+windowrulev2 = opacity 0.80 0.80,title:^(Spotify)(.*)$
 windowrulev2 = opacity 0.80 0.80,class:^(Code)$
-windowrulev2 = opacity 0.80 0.90,class:^(code-)(.*)$
+windowrulev2 = opacity 0.90 0.80,class:^(code-)(.*)$
 windowrulev2 = opacity 0.80 0.80,class:^(code-url-handler)$
 windowrulev2 = opacity 0.80 0.80,class:^(kitty)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.dolphin)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.ark)$
 windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
 windowrulev2 = opacity 0.80 0.80,class:^(qt5ct)$
+windowrulev2 = opacity 0.80 0.80,class:^(Slack)$
 
 windowrulev2 = opacity 0.90 0.90,class:^(com.github.rafostar.Clapper)$ #Clapper-Gtk
 windowrulev2 = opacity 0.80 0.80,class:^(com.github.tchx84.Flatseal)$ #Flatseal-Gtk
