--- a/features/home-manager/vscode/vscode-user-settings.json
+++ b/features/home-manager/vscode/vscode-user-settings.json
@@ -3,7 +3,7 @@
     "[typescript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    "workbench.colorTheme": "Noctis High Contrast",
+    "workbench.colorTheme": "Catppuccin Mocha",
     "editor.codeActionsOnSave": {
         "source.fixAll": "explicit"
     },
@@ -73,6 +73,6 @@
     "codesandbox.currentWorkspace": "d47959d1-a1b4-4c97-a25f-c6d4d1bfcc5b",
     "vscode-edge-devtools.browserFlavor": "Default",
     "editor.fontFamily": "'JetBrainsMono Nerd Font Mono', Menlo, Monaco, 'Courier New', monospace",
-    "editor.fontSize": 13,
+    "editor.fontSize": 14,
     "window.titleBarStyle": "custom"
 }
