--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -45,6 +45,7 @@ bind = $mainMod, R, exec, pkill -x rofi || rofilaunch.sh f # browse system files
 bind = $confMod, T, exec, pkill -x rofi || themeselect.sh # theme select menu
 bind = $confMod, A, exec, pkill -x rofi || rofiselect.sh # rofi style select menu
 bind = $confMod, W, exec, pkill -x rofi || swwwallselect-patched.sh # rofi wall select menu
+bind = $mainMod, COMMA, exec, rofi -modi emoji -show emoji
 
 # Wallpaper control
 bind = $auxMod, right, exec, swimctl next # next wallpaper
@@ -78,8 +79,8 @@ bindel = , XF86MonBrightnessUp, exec, brightnesscontrol.sh i # increase brightne
 bindel = , XF86MonBrightnessDown, exec, brightnesscontrol.sh d # decrease brightness
 
 # Screenshot/Screencapture
-#bind = $confMod, P, exec, screenshot.sh s # drag to snip an area / click on a window to print it
-#bind = $mainMod, P, exec, screenshot.sh m # print focused monitor
+bind = $auxMod, O, exec, screenshot.sh s # drag to snip an area / click on a window to print it
+bind = $auxMod, P, exec, screenshot.sh m # print focused monitor
 bind = ,print, exec, screenshot.sh p  # print all monitor outputs
 
 # Move focus with mainMod + arrow keys
