--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -27,6 +27,7 @@ bind = $confMod, F, fullscreen, # toggle the window on focus to fullscreen
 bind = $mainMod, l, exec, swaylock # lock screen
 bind = $mainMod, backspace, exec, wlogout-launcher-hyprland 2 # logout menu
 bind = $navMod, ESCAPE, exec, systemctl-toggle --user waybar.service
+bind = $confMod, SPACE, exec, 1password --quick-access
 
 bind = $navMod, W, togglegroup, # toggle the window on focus to float
 
@@ -150,6 +151,8 @@ bind = $mainMod, S, togglespecialworkspace,
 
 # Toggle Layout
 bind = $mainMod, SPACE, togglesplit, # dwindle
+
+
 
 # Move window silently to workspace Super + Alt + [0-9]
 bind = $auxMod, 1, movetoworkspacesilent, 1
