tmux, calendar stuff, texts.com package

--- a/config/waybar/modules/clock.jsonc
+++ b/config/waybar/modules/clock.jsonc
@@ -1,5 +1,5 @@
     "clock": {
-        "format": "{:%I:%M %p 󰃭 %a %d}",
+        "format": "{:%H:%M 󰃭 %a %d}",
         "format-alt": "{:%H:%M  %b %Y}",
         "tooltip-format": "<tt><big>{calendar}</big></tt>"
     },
