--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -18,7 +18,10 @@ misc {
 
 exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
-exec-once = kitty # Make sure a terminal is accessible
+exec-once = obsidian
+exec-once = thunderbird
+exec-once = 1password
+exec-once = slack
 
 # █▀▀ █▄░█ █░█
 # ██▄ █░▀█ ▀▄▀
