working linting and formatting via eslint

--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -85,10 +85,10 @@ bind = $auxMod, P, exec, screenshot.sh m # print focused monitor
 bind = ,print, exec, screenshot.sh p  # print all monitor outputs
 
 # Move focus with mainMod + arrow keys
-bind = $navMod, left, movefocus, l
-bind = $navMod, right, movefocus, r
-bind = $navMod, up, movefocus, u
-bind = $navMod, down, movefocus, d
+bind = $mainMod, left, movefocus, l
+bind = $mainMod, right, movefocus, r
+bind = $mainMod, up, movefocus, u
+bind = $mainMod, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -103,8 +103,8 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Switch workspaces relative to the active workspace with mainMod + CTRL + [←→]
-bind = $mainMod, K, workspace, r+1 
-bind = $mainMod, J, workspace, r-1
+bind = $navMod, RIGHT, workspace, r+1 
+bind = $navMod, LEFT, workspace, r-1
 
 # move to the first empty workspace instantly with mainMod + CTRL + [↓]
 bind = $auxMod, down, workspace, empty 
@@ -128,8 +128,8 @@ bind = $confMod, 9, movetoworkspace, 9
 bind = $confMod, 0, movetoworkspace, 10
 
 # Move active window to a relative workspace with mainMod + CTRL + ALT + [←→]
-bind = $confMod, K, movetoworkspace, r+1
-bind = $confMod, J, movetoworkspace, r-1
+bind = $auxMod, LEFT, movetoworkspace, r+1
+bind = $auxMod, RIGHT, movetoworkspace, r-1
 
 # Move active window around current workspace with mainMod + SHIFT + CTRL [←→↑↓]
 bind = $confMod, left, movewindow, l
