--- a/config/hypr/windowrules.conf
+++ b/config/hypr/windowrules.conf
@@ -65,7 +65,9 @@ windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = float,title:^(Open\ Folder)$
 windowrulev2 = float,title:^(Open\ File)$
 windowrulev2 = stayfocused,title:^(Quick\ Access\ \—\ 1Password)$
-windowrulev2 = windowdance,title:^(Quick\ Access\ \—\ 1Password)$
-windowrulev2 = forceinput,title:^(Quick\ Access\ \—\ 1Password)$
+#windowrulev2 = windowdance,title:^(Quick\ Access\ \—\ 1Password)$
+#windowrulev2 = forceinput,title:^(Quick\ Access\ \—\ 1Password)$
+#windowrulev2 = float,title:^(Quick\ Access\ \—\ 1Password)$
 windowrulev2 = float,class:^(\.blueman-manager-wrapped)$
+windowrulev2 = noanim,title:^(Quick\ Access\ \—\ 1Password)$
 
