nvim and tmux customizations

--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -9,9 +9,11 @@
 # Main modifier
 $navMod = SUPER
 $ctrlMod = CTRL
+$optMod = ALT
 $mainMod = $ctrlMod SHIFT
 $confMod = $ctrlMod $navMod
 $auxMod = $navMod SHIFT
+$totalMod = $navMod $ctrlMod SHIFT
 
 # assign apps
 $term = kitty
@@ -19,6 +21,20 @@ $editor = code-insiders
 $file = dolphin
 $browser = google-chrome-stable
 
+bind=$mainMod,R,submap,resize
+
+submap=resize
+
+bind=,left,resizeactive,-30 0
+bind=,right,resizeactive,30 0
+bind=,up,resizeactive,0 -30
+bind=,down,resizeactive,0 30
+bind=,escape,submap,reset
+bind=$mainMod,R,submap,reset
+
+submap=reset
+
+bind=$mainMod,R,submap,resize
 # Window/Session actions
 bind = $navMod, Q, killactive
 bind = $ctrlMod, F4, killactive
@@ -41,7 +57,7 @@ bind = $mainMod, F, exec, $browser # open browser
 bind = $ctrlMod, SPACE, exec, pkill -x rofi || rofilaunch.sh d # launch desktop applications
 bind = $ctrlMod, TAB, exec, pkill -x rofi || rofilaunch.sh w # switch between desktop applications
 
-bind = $mainMod, R, exec, pkill -x rofi || rofilaunch.sh f # browse system files
+#bind = $mainMod, R, exec, pkill -x rofi || rofilaunch.sh f # browse system files
 #bind = $mainMod, V, exec, pkill -x rofi || cliphist.sh c  # open Pasteboard in screen center
 bind = $confMod, T, exec, pkill -x rofi || themeselect.sh # theme select menu
 bind = $confMod, A, exec, pkill -x rofi || rofiselect.sh # rofi style select menu
@@ -49,8 +65,8 @@ bind = $confMod, W, exec, pkill -x rofi || swwwallselect-patched.sh # rofi wall 
 bind = $mainMod, COMMA, exec, rofi -modi emoji -show emoji
 
 # Wallpaper control
-bind = $auxMod, right, exec, swimctl next # next wallpaper
-bind = $auxMod, left, exec, swimctl previous # previous wallpaper
+#bind = $auxMod, right, exec, swimctl next # next wallpaper
+#bind = $auxMod, left, exec, swimctl previous # previous wallpaper
 bind = $confMod, mouse_down, exec, swimctl next
 bind = $confMod, mouse_up, exec, swimctl previous
 
@@ -85,10 +101,10 @@ bind = $auxMod, P, exec, screenshot.sh m # print focused monitor
 bind = ,print, exec, screenshot.sh p  # print all monitor outputs
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $confMod, left, movefocus, l
+bind = $confMod, right, movefocus, r
+bind = $confMod, up, movefocus, u
+bind = $confMod, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -108,12 +124,7 @@ bind = $navMod, LEFT, workspace, r-1
 
 # move to the first empty workspace instantly with mainMod + CTRL + [↓]
 bind = $auxMod, down, workspace, empty 
-
-# Resize windows
-binde = $auxMod, right, resizeactive, 30 0
-binde = $auxMod, left, resizeactive, -30 0
-binde = $auxMod, up, resizeactive, 0 -30
-binde = $auxMod, down, resizeactive, 0 30
+# will reset the submap, meaning end the current one and return to the global one
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $confMod, 1, movetoworkspace, 1
@@ -128,18 +139,18 @@ bind = $confMod, 9, movetoworkspace, 9
 bind = $confMod, 0, movetoworkspace, 10
 
 # Move active window to a relative workspace with mainMod + CTRL + ALT + [←→]
-bind = $auxMod, LEFT, movetoworkspace, r+1
-bind = $auxMod, RIGHT, movetoworkspace, r-1
+bind = $totalMod, LEFT, movetoworkspace, r-1
+bind = $totalMod, RIGHT, movetoworkspace, r+1
 
 # Move active window around current workspace with mainMod + SHIFT + CTRL [←→↑↓]
-bind = $confMod, left, movewindow, l
-bind = $confMod, right, movewindow, r
-bind = $confMod, up, movewindow, u
-bind = $confMod, down, movewindow, d
+bind = $auxMod, left, movewindow, l
+bind = $auxMod, right, movewindow, r
+bind = $auxMod, up, movewindow, u
+bind = $auxMod, down, movewindow, d
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+#bind = $totalMod, mouse_down, workspace, e+1
+#bind = $totalMod, mouse_up, workspace, e-1
 
 # Move/Resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
