--- a/config/hypr/windowrules.conf
+++ b/config/hypr/windowrules.conf
@@ -70,4 +70,4 @@ windowrulev2 = stayfocused,title:^(Quick\ Access\ \—\ 1Password)$
 #windowrulev2 = float,title:^(Quick\ Access\ \—\ 1Password)$
 windowrulev2 = float,class:^(\.blueman-manager-wrapped)$
 windowrulev2 = noanim,title:^(Quick\ Access\ \—\ 1Password)$
-
+windowrulev2 = float,title:^(Compact\ folders)$
