wip: tmuxplugins-clockify

--- a/config/tmux/overrides.conf
+++ b/config/tmux/overrides.conf
@@ -15,3 +15,5 @@ bind l select-pane -R
 
 unbind-key C-p
 bind C-p display-popup "tmux new-session -A -s scratch"
+
+set -g @thumbs-command 'echo -n {} | pbcopy'
