--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -16,7 +16,7 @@ $auxMod = $navMod SHIFT
 $totalMod = $navMod $ctrlMod SHIFT
 
 # assign apps
-$term = kitty
+$term = kitty tmux
 $editor = code-insiders
 $file = dolphin
 $browser = google-chrome-stable
