--- a/config/tmux/overrides.conf
+++ b/config/tmux/overrides.conf
@@ -6,6 +6,7 @@ set -g default-terminal "screen-256color"
 setw -g mode-keys vi
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
+set -g status-interval 1
 
 bind z resize-pane -Z
 bind h select-pane -L
@@ -16,4 +17,12 @@ bind l select-pane -R
 unbind-key C-p
 bind C-p display-popup "tmux new-session -A -s scratch"
 
-set -g @thumbs-command 'echo -n {} | pbcopy'
+# Mac OS specific binds and configs
+if-shell "uname | grep -q Darwin" {
+  set -g @thumbs-command 'echo -n {} | pbcopy'
+}
+
+# Linux/Wayland specific binds and configs
+if-shell "uname | grep -q Linux" {
+  set -g @thumbs-command 'echo -n {} | wl-copy'
+}
