tmux and neovim fixes

--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -51,7 +51,7 @@ input {
     #kb_variant = nodeadkeys
     #kb_variant = mac
     kb_model = macintosh
-    kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch
+    kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape
 
     follow_mouse = 1
 
