--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -40,7 +40,7 @@ bind = $navMod, Q, killactive
 bind = $ctrlMod, F4, killactive
 bind = $navMod, V, togglefloating, # toggle the window on focus to float
 bind = $confMod, F, fullscreen, # toggle the window on focus to fullscreen
-bind = $mainMod, l, exec, swaylock # lock screen
+bind = $confMod, l, exec, swaylock # lock screen
 bind = $mainMod, backspace, exec, wlogout-launcher-hyprland 2 # logout menu
 bind = $navMod, ESCAPE, exec, systemctl-toggle --user waybar.service
 bind = $confMod, SPACE, exec, 1password --quick-access
@@ -101,10 +101,10 @@ bind = $auxMod, P, exec, screenshot.sh m # print focused monitor
 bind = ,print, exec, screenshot.sh p  # print all monitor outputs
 
 # Move focus with mainMod + arrow keys
-bind = $confMod, left, movefocus, l
-bind = $confMod, right, movefocus, r
-bind = $confMod, up, movefocus, u
-bind = $confMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
