--- a/config/tmux/overrides.conf
+++ b/config/tmux/overrides.conf
@@ -7,16 +7,27 @@ setw -g mode-keys vi
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
 set -g status-interval 1
+set-option -g prefix C-a
 
 bind z resize-pane -Z
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind a copy-mode
+bind C-a copy-mode
 
-unbind-key C-p
-bind C-p display-popup "tmux new-session -A -s scratch"
-
+unbind-key t
+bind t if-shell -F '#{==:#{session_name},scratch}' {
+  detach-client
+} {
+  display-popup -E "tmux new-session -A -s scratch"
+}
+bind c-t if-shell -F '#{==:#{session_name},scratch}' {
+  detach-client
+} {
+  display-popup -E "tmux new-session -A -s scratch"
+}
 # Mac OS specific binds and configs
 if-shell "uname | grep -q Darwin" {
   set -g @thumbs-command 'echo -n {} | pbcopy'
