tableplus, clockify systemd service

--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -40,7 +40,7 @@ bind = $navMod, Q, killactive
 bind = $ctrlMod, F4, killactive
 bind = $navMod, V, togglefloating, # toggle the window on focus to float
 bind = $confMod, F, fullscreen, # toggle the window on focus to fullscreen
-bind = $confMod, l, exec, swaylock # lock screen
+# bind = $confMod, l, exec, swaylock # lock screen
 bind = $mainMod, backspace, exec, wlogout-launcher-hyprland 2 # logout menu
 bind = $navMod, ESCAPE, exec, systemctl-toggle --user waybar.service
 bind = $confMod, SPACE, exec, 1password --quick-access
@@ -119,8 +119,8 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Switch workspaces relative to the active workspace with mainMod + CTRL + [←→]
-bind = $navMod, RIGHT, workspace, r+1 
-bind = $navMod, LEFT, workspace, r-1
+bind = $confMod, l, workspace, r+1 
+bind = $confMod, h, workspace, r-1
 
 # move to the first empty workspace instantly with mainMod + CTRL + [↓]
 bind = $auxMod, down, workspace, empty 
