wip: themeing stuff

--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -30,6 +30,12 @@ bind=,right,resizeactive,30 0
 bind=,up,resizeactive,0 -30
 bind=,down,resizeactive,0 30
 bind=,escape,submap,reset
+
+bind=,h,resizeactive,-30 0
+bind=,l,resizeactive,30 0
+bind=,k,resizeactive,0 -30
+bind=,j,resizeactive,0 30
+
 bind=$mainMod,R,submap,reset
 
 submap=reset
