--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -104,6 +104,7 @@ misc {
     disable_hyprland_logo = 1
     mouse_move_enables_dpms = true
     key_press_enables_dpms = true
+    focus_on_activate = true
 }
 
 
