--- a/config/hypr/windowrules.conf
+++ b/config/hypr/windowrules.conf
@@ -45,8 +45,8 @@ windowrulev2 = opacity 0.80 0.70,class:^(nm-applet)$
 windowrulev2 = opacity 0.80 0.70,class:^(nm-connection-editor)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.kde.polkit-kde-authentication-agent-1)$
 
-windowrulev2 = float,class:^(thunderbird)$,title:^(Invitations|Write|(\d+ Reminder)|Account Setup)(.*)$
-windowrulev2 = float,class:^(thunderbird)$,initialTitle:^(Calendar Reminders)(.*)$
+windowrulev2 = float,title:^(Invitations|Write|(\d+ Reminder)|Account Setup)(.*)$
+windowrulev2 = float,initialTitle:^(Calendar Reminders)(.*)$
 windowrulev2 = float,class:^(qt5ct)$
 windowrulev2 = float,class:^(nwg-look)$
 windowrulev2 = float,class:^(org.kde.ark)$
