successfully updated nixpkgs home

--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -50,11 +50,10 @@ input {
     kb_layout = se
     #kb_variant = nodeadkeys
     #kb_variant = mac
-    kb_model = macintosh
-    kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape
+    # kb_model = macintosh
+    # kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape
 
     follow_mouse = 1
-
     touchpad {
         natural_scroll = yes
         clickfinger_behavior = 1
@@ -64,6 +63,14 @@ input {
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+}
+device:apple-inc.-magic-keyboard-with-numeric-keypad {
+  kb_layout = se
+  kb_model = macintosh
+  kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape
+}
+device:kinesis-corporation-adv360-pro-keyboard {
+  kb_layout = us
 }
 
 gestures {
