--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -149,10 +149,10 @@ bind = $totalMod, LEFT, movetoworkspace, r-1
 bind = $totalMod, RIGHT, movetoworkspace, r+1
 
 # Move active window around current workspace with mainMod + SHIFT + CTRL [←→↑↓]
-bind = $auxMod, left, movewindow, l
-bind = $auxMod, right, movewindow, r
-bind = $auxMod, up, movewindow, u
-bind = $auxMod, down, movewindow, d
+bind = $auxMod, h, movewindow, l
+bind = $auxMod, l, movewindow, r
+bind = $auxMod, k, movewindow, u
+bind = $auxMod, j, movewindow, d
 
 # Scroll through existing workspaces with mainMod + scroll
 #bind = $totalMod, mouse_down, workspace, e+1
