--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -64,21 +64,26 @@ input {
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
-device:apple-inc.-magic-keyboard-with-numeric-keypad {
-  kb_layout = se
-  kb_model = macintosh
-  kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape
-}
-device:kinesis-corporation-adv360-pro-keyboard {
-  kb_layout = us
-}
 
 gestures {
-    workspace_swipe = true
+  workspace_swipe = true
     workspace_swipe_fingers = 3
 }
-
 # Per-device config possible!
+device:hemma-tangentbord {
+   kb_layout = se,us
+   kb_model = macintosh
+   kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape,grp:rctrl_toggle
+ }
+device:apple-inc.-magic-keyboard-with-numeric-keypad {
+   kb_layout = se,us
+   kb_model = macintosh
+   kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape,grp:rctrl_toggle
+ }
+device:kinesis-corporation-adv360-pro-keyboard {
+   kb_layout = us,se
+   kb_options = grp:toggle
+ }
 
 # █░░ ▄▀█ █▄█ █▀█ █░█ ▀█▀ █▀
 # █▄▄ █▀█ ░█░ █▄█ █▄█ ░█░ ▄█
