neovim config overhaul

--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -90,8 +90,8 @@ bindl  = , XF86AudioNext, exec, playerctl next
 bindl  = , XF86AudioPrev, exec, playerctl previous
 
 # Waybar Control
-bind = $mainMod ALT, up, exec, waybar-confgen-hyprdots n # next waybar mode
-bind = $mainMod ALT, down, exec, waybar-confgen-hyprdots p # previous waybar mode
+bind = $mainMod, n, exec, waybar-confgen-hyprdots n # next waybar mode
+bind = $mainMod, p, exec, waybar-confgen-hyprdots p # previous waybar mode
 
 # Custom Scripts
 bind = $mainMod, ESCAPE, exec, kitty -e htop  # open htop/btop if installed or default to top (system monitor)
