--- a/config/tmux/overrides.conf
+++ b/config/tmux/overrides.conf
@@ -17,6 +17,9 @@ bind l select-pane -R
 bind a copy-mode
 bind C-a copy-mode
 
+bind % split-window -h -c '#{pane_current_path}'
+bind \" split-window -c '#{pane_current_path}'
+
 unbind-key t
 bind t if-shell -F '#{==:#{session_name},scratch}' {
   detach-client
