throw out nvchad for good

--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -71,19 +71,19 @@ gestures {
 }
 # Per-device config possible!
 device:hemma-tangentbord {
-   kb_layout = se,us
-   kb_model = macintosh
-   kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape,grp:rctrl_toggle
- }
+  kb_layout = se,us
+  kb_model = macintosh
+  kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape,grp:rctrl_toggle
+}
 device:apple-inc.-magic-keyboard-with-numeric-keypad {
-   kb_layout = se,us
-   kb_model = macintosh
-   kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape,grp:rctrl_toggle
- }
-device:kinesis-corporation-adv360-pro-keyboard {
-   kb_layout = us,se
-   kb_options = grp:toggle
- }
+  kb_layout = se,us
+  kb_model = macintosh
+  kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape,grp:rctrl_toggle
+}
+# device:kinesis-corporation-adv360-pro-keyboard {
+#    kb_layout = us,se
+#    kb_options = grp:toggle
+#  }
 
 # █░░ ▄▀█ █▄█ █▀█ █░█ ▀█▀ █▀
 # █▄▄ █▀█ ░█░ █▄█ █▄█ ░█░ ▄█
