--- a/config/waybar/modules/language.jsonc
+++ b/config/waybar/modules/language.jsonc
@@ -1,5 +1,7 @@
     "hyprland/language": {
-        "format": "{short} {variant}",
+        "format": "{short}",
+        "format-us": "us",
+        "format-se": "se",
         "on-click": "keyboardswitch.sh",
     },
 
