some more nvim goodness

--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -54,7 +54,7 @@ bind = $confMod, SPACE, exec, 1password --quick-access
 bind = $navMod, W, togglegroup, # toggle the window on focus to float
 
 # Application shortcuts
-bind = $mainMod, T, exec, $term  # open terminal
+bind = $mainMod, T, exec, kitty ta  # open terminal
 bind = $mainMod, E, exec, $file # open file manager
 #bind = $mainMod, C, exec, $editor # open vscode
 bind = $mainMod, F, exec, $browser # open browser
