--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -70,12 +70,14 @@ gestures {
     workspace_swipe_fingers = 3
 }
 # Per-device config possible!
-device:hemma-tangentbord {
+device {
+  name = hemma-tangentbord
   kb_layout = se,us
   kb_model = macintosh
   kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape,grp:rctrl_toggle
 }
-device:apple-inc.-magic-keyboard-with-numeric-keypad {
+device {
+  name = apple-inc.-magic-keyboard-with-numeric-keypad
   kb_layout = se,us
   kb_model = macintosh
   kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape,grp:rctrl_toggle
@@ -128,3 +130,5 @@ source = ~/.config/hypr/animations.conf
 source = ~/.config/hypr/keybindings.conf
 source = ~/.config/hypr/windowrules.conf
 source = ~/.config/hypr/nvidia.conf
+source = ~/.config/hypr/plugins.conf
+
