file management stuff

--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -47,7 +47,7 @@ exec-once = slack
 
 # TODO: configure from system config?
 input {
-    kb_layout = se
+    kb_layout = us,se
     #kb_variant = nodeadkeys
     #kb_variant = mac
     # kb_model = macintosh
@@ -72,15 +72,21 @@ gestures {
 # Per-device config possible!
 device {
   name = hemma-tangentbord
-  kb_layout = se,us
+  kb_layout = us,se
   kb_model = macintosh
   kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape,grp:rctrl_toggle
 }
 device {
   name = apple-inc.-magic-keyboard-with-numeric-keypad
-  kb_layout = se,us
+  kb_layout = us,se
   kb_model = macintosh
   kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape,grp:rctrl_toggle
+}
+device {
+  name = usb-keyboard
+  kb_layout = us,se
+  #kb_options = grp:rctrl_toggle,caps:escape
+  kb_options = ctrl:swap_lalt_lctl_lwin,grp:rctrl_toggle,caps:escape
 }
 # device:kinesis-corporation-adv360-pro-keyboard {
 #    kb_layout = us,se
