--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -103,7 +103,7 @@ bindel = , XF86MonBrightnessDown, exec, brightnesscontrol.sh d # decrease bright
 
 # Screenshot/Screencapture
 bind = $auxMod, O, exec, screenshot.sh s # drag to snip an area / click on a window to print it
-bind = $auxMod, P, exec, screenshot.sh m # print focused monitor
+bind = $auxMod, P, exec, screenshot.sh p # print focused monitor
 bind = ,print, exec, screenshot.sh p  # print all monitor outputs
 
 # Move focus with mainMod + arrow keys
