--- a/config/tmux/overrides.conf
+++ b/config/tmux/overrides.conf
@@ -7,6 +7,7 @@ setw -g mode-keys vi
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
 set -g status-interval 1
+set -g allow-passthrough on
 set-option -g prefix C-a
 
 bind z resize-pane -Z
