leap, treesitter fixes

--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -19,7 +19,7 @@ $totalMod = $navMod $ctrlMod SHIFT
 $term = kitty ta
 $editor = code-insiders
 $file = dolphin
-$browser = google-chrome-stable
+$browser = firefox
 
 bind=$mainMod,R,submap,resize
 
