--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -72,19 +72,16 @@ gestures {
 # Per-device config possible!
 device {
   name = hemma-tangentbord
-  kb_layout = us,se
   kb_model = macintosh
   kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape,grp:rctrl_toggle
 }
 device {
   name = apple-inc.-magic-keyboard-with-numeric-keypad
-  kb_layout = us,se
   kb_model = macintosh
   kb_options = ctrl:swap_lwin_lctl,ctrl:swap_rwin_rctl,lv3:alt_switch,caps:escape,grp:rctrl_toggle
 }
 device {
   name = usb-keyboard
-  kb_layout = us,se
   #kb_options = grp:rctrl_toggle,caps:escape
   kb_options = ctrl:swap_lalt_lctl_lwin,grp:rctrl_toggle,caps:escape
 }
@@ -92,6 +89,11 @@ device {
 #    kb_layout = us,se
 #    kb_options = grp:toggle
 #  }
+#  
+device {
+  name = zsa-technology-labs-voyager
+  kb_options = grp:shift_caps_toggle
+}
 
 # █░░ ▄▀█ █▄█ █▀█ █░█ ▀█▀ █▀
 # █▄▄ █▀█ ░█░ █▄█ █▄█ ░█░ ▄█
@@ -110,7 +112,7 @@ master {
 }
 
 
-#█▀ █▀█ █▀▀ █▀▀ █ ▄▀█ █░░
+#█▀ █▀█ █▀▀ █▀▀ █ ▄▀█ █░
 #▄█ █▀▀ ██▄ █▄▄ █ █▀█ █▄▄
 
 decoration {
