--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -77,9 +77,9 @@ bind = $confMod, mouse_down, exec, swimctl next
 bind = $confMod, mouse_up, exec, swimctl previous
 
 # Audio control
-bindl  = , F10, exec, volumecontrol.sh -o m # toggle audio mute
-bindel = , F11, exec, volumecontrol.sh -o d # decrease volume
-bindel = , F12, exec, volumecontrol.sh -o i # increase volume
+# bindl  = , F10, exec, volumecontrol.sh -o m # toggle audio mute
+# bindel = , F11, exec, volumecontrol.sh -o d # decrease volume
+# bindel = , F12, exec, volumecontrol.sh -o i # increase volume
 bindl  = , XF86AudioMute, exec, volumecontrol.sh -o m # toggle audio mute
 bindl  = , XF86AudioMicMute, exec, volumecontrol.sh -i m # toggle microphone mute
 bindel = , XF86AudioLowerVolume, exec, volumecontrol.sh -o d # decrease volume
