--- a/config/hypr/windowrules.conf
+++ b/config/hypr/windowrules.conf
@@ -26,6 +26,8 @@ windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
 windowrulev2 = opacity 0.80 0.80,class:^(qt5ct)$
 windowrulev2 = opacity 0.80 0.80,class:^(Slack)$
 
+windowrulev2 = float, workspace:-99
+
 windowrulev2 = opacity 0.90 0.90,class:^(com.github.rafostar.Clapper)$ #Clapper-Gtk
 windowrulev2 = opacity 0.80 0.80,class:^(com.github.tchx84.Flatseal)$ #Flatseal-Gtk
 windowrulev2 = opacity 0.80 0.80,class:^(hu.kramo.Cartridges)$ #Cartridges-Gtk
