--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -3,10 +3,12 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
-monitor=,highres,auto,1
+monitor=Unknown-1,disable
+monitor=DP-2,highres,auto,1
 
 misc {
     vrr = 1
+    vfr = true
 }
 
 
@@ -15,13 +17,13 @@ misc {
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 # Execute your favorite apps at launch
-
+exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE" 
 exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
-exec-once = obsidian
-exec-once = thunderbird
-exec-once = 1password
-exec-once = slack
+# exec-once = obsidian
+# exec-once = thunderbird
+# exec-once = 1password
+# exec-once = slack
 
 # █▀▀ █▄░█ █░█
 # ██▄ █░▀█ ▀▄▀
@@ -116,10 +118,12 @@ master {
 #▄█ █▀▀ ██▄ █▄▄ █ █▀█ █▄▄
 
 decoration {
-    dim_special = 0.3
-    blur {
-        special = true
-    }
+  drop_shadow = false
+  # dim_special = 0.3
+  blur {
+    enabled = false
+    special = false
+  }
 }
 
 misc {
@@ -138,5 +142,5 @@ source = ~/.config/hypr/animations.conf
 source = ~/.config/hypr/keybindings.conf
 source = ~/.config/hypr/windowrules.conf
 source = ~/.config/hypr/nvidia.conf
-source = ~/.config/hypr/plugins.conf
+# source = ~/.config/hypr/plugins.conf
 
