some new mappings

--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -8,7 +8,6 @@ monitor=DP-2,highres,auto,1
 
 misc {
     vrr = 1
-    vfr = true
 }
 
 
@@ -22,7 +21,7 @@ exec-once = wl-paste --type text --watch cliphist store # clipboard store text d
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
 # exec-once = obsidian
 # exec-once = thunderbird
-# exec-once = 1password
+exec-once = 1password
 # exec-once = slack
 
 # █▀▀ █▄░█ █░█
