--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -24,6 +24,7 @@ exec-once = wl-paste --type image --watch cliphist store # clipboard store image
 exec-once = 1password
 # exec-once = slack
 exec-once = hypridle
+exec-once = hyprlock
 
 # █▀▀ █▄░█ █░█
 # ██▄ █░▀█ ▀▄▀
