--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -24,8 +24,8 @@ exec-once = wl-paste --type image --watch cliphist store # clipboard store image
 # exec-once = thunderbird
 exec-once = 1password
 # exec-once = slack
-exec-once = hypridle
-exec-once = hyprlock
+# exec-once = hypridle
+# exec-once = hyprlock
 
 # █▀▀ █▄░█ █░█
 # ██▄ █░▀█ ▀▄▀
