--- a/config/tmux/overrides.conf
+++ b/config/tmux/overrides.conf
@@ -8,6 +8,7 @@ set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
 set -g status-interval 1
 set -g allow-passthrough on
+set -g visual-activity off
 set-option -g prefix C-a
 
 bind z resize-pane -Z
