--- a/config/tmux/overrides.conf
+++ b/config/tmux/overrides.conf
@@ -9,6 +9,7 @@ set -g pane-border-style 'fg=brightblack,bg=default'
 set -g status-interval 1
 set -g allow-passthrough on
 set -g visual-activity off
+set-option -sa terminal-features ',XXX:RGB'
 set-option -g prefix C-a
 
 bind z resize-pane -Z
