--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -18,7 +18,7 @@ $totalMod = $navMod $ctrlMod SHIFT
 # assign apps
 $term = kitty ta
 $editor = code-insiders
-$file = dolphin
+$file = kitty nv
 $browser = firefox
 
 bind=$mainMod,R,submap,resize
